--- a/src/style/ngm-camera-information.css
+++ b/src/style/ngm-camera-information.css
@@ -1,5 +1,5 @@
 ngm-camera-information {
-  width: 229px;
+  width: 230px;
   background-color: lightgray;
   display: flex;
   justify-content: space-around;
